--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </header>
                
         <h2>My Family</h2>
+        <img src https://github.com/galaxyboss12/galaxyboss12.github.io/blob/master/images/erik-jan-leusink-378147.jpg?raw=true> 
         <p>I have my mom and dad plus 2 pets. My Mom is a fundraiser for Memorial Childern hospital and my Dad is currently looking for a job but he worked for boeing for 25 years. Ralph my dog and Cinnamon my cat. my pets do not get along at all my dog is 2 years old so still young and likes to bark at a lot of stuff like his reflection and Cinnamon. </p>
         <h2>Hobbies/intrest</h2>
         <P>One of my hobbies is baseball, I've been playing baseball for 7 or 6 years now and I plan to keep playing. another hobby is gaming i like to play with my firends. Also recording for youtube. I've been a youtuber for 1 year now </P>
